; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_sc27xx_adc.c_sc27xx_adc_get_ratio.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_sc27xx_adc.c_sc27xx_adc_get_ratio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @sc27xx_adc_get_ratio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sc27xx_adc_get_ratio(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %31 [
    i32 1, label %7
    i32 2, label %7
    i32 3, label %7
    i32 4, label %7
    i32 5, label %16
    i32 6, label %18
    i32 7, label %20
    i32 8, label %20
    i32 19, label %29
  ]

7:                                                ; preds = %2, %2, %2, %2
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = call i32 @SC27XX_VOLT_RATIO(i32 400, i32 1025)
  br label %14

12:                                               ; preds = %7
  %13 = call i32 @SC27XX_VOLT_RATIO(i32 1, i32 1)
  br label %14

14:                                               ; preds = %12, %10
  %15 = phi i32 [ %11, %10 ], [ %13, %12 ]
  store i32 %15, i32* %3, align 4
  br label %33

16:                                               ; preds = %2
  %17 = call i32 @SC27XX_VOLT_RATIO(i32 7, i32 29)
  store i32 %17, i32* %3, align 4
  br label %33

18:                                               ; preds = %2
  %19 = call i32 @SC27XX_VOLT_RATIO(i32 375, i32 9000)
  store i32 %19, i32* %3, align 4
  br label %33

20:                                               ; preds = %2, %2
  %21 = load i32, i32* %5, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %20
  %24 = call i32 @SC27XX_VOLT_RATIO(i32 100, i32 125)
  br label %27

25:                                               ; preds = %20
  %26 = call i32 @SC27XX_VOLT_RATIO(i32 1, i32 1)
  br label %27

27:                                               ; preds = %25, %23
  %28 = phi i32 [ %24, %23 ], [ %26, %25 ]
  store i32 %28, i32* %3, align 4
  br label %33

29:                                               ; preds = %2
  %30 = call i32 @SC27XX_VOLT_RATIO(i32 1, i32 3)
  store i32 %30, i32* %3, align 4
  br label %33

31:                                               ; preds = %2
  %32 = call i32 @SC27XX_VOLT_RATIO(i32 1, i32 1)
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %31, %29, %27, %18, %16, %14
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @SC27XX_VOLT_RATIO(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
